node/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: abhinav
spec:
  selector:
    app: demo-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: http
