node/k8s/ingress.yaml
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: demo-app-ingress
  namespace: abhinav
spec:
  rules:
  - http:
      paths:
      - path: "/*"
        pathType: "Prefix"
        backend:
          serviceName: "demo-app"
          servicePort: 3001
